--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <h2>hello second commit</h2>
     <!-- <div class="dropdown">
         <span>hover me</span>
         <div class="dropdown-content">
